tests/saws/fixtures/invalid/02_column_count_mismatch.saws
name,age,active
"Alice",30,true
"Bob",25
